updated links to menu button examples and reverse references

--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -16,7 +16,7 @@
     <main>
       <h1>ARIA Menu Button Example:  Popup Menu of Actions</h1>
  
-      <p><a href="../../aria-practices.html#h-menubutton">Authoring Practice Design Patten for Menu Button</a></p>
+      <p><a href="../../../aria-practices.html#h-menubutton">Authoring Practice Design Patten for Menu Button</a></p>
 
       <section id="code-ex-1">
         <h2>Menu Button using a <code>button</code> element</h2>
