--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -17,7 +17,7 @@
     <main>
       <h1>ARIA Menu Button Example: Popup Menu of Links</h1>
  
-      <p><a href="http://www.w3.org/TR/wai-aria-practices-1.1/#h-menubutton">Authoring Practice Design Patten for Menu Button</a></p>
+      <p><a href="../../../aria-practices.html#h-menubutton">Authoring Practice Design Patten for Menu Button</a></p>
 
       <section id="code-ex-1">
         <h2>Menu Button Example</h2>
