--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1204,8 +1204,8 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       <section class="notoc">
         <h4>Example</h4>
         <ul>
-          <li><a href="examples/menu-button/menu-button-1.html">Menu button with popup menu for actions</a></li>
-          <li><a href="examples/menu-button/menu-button-2.html">Menu button with popup menu for links</a></li>
+          <li><a href="examples/menu-button/menu-button-1/menu-button-1.html">Menu button with popup menu for actions using <code>button</code> element for menu button.</li>
+          <li><a href="examples/menu-button/menu-button-2/menu-button-2.html">Menu button with popup menu for links using <code>a</code> element for menu button.</a></li>
       </section>
     </section>
 
