Added information about keyboard focus styling

--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -259,6 +259,7 @@
                   <li>Idenfities an ARIA <code>menu</code>.</li>
                   <li>Does not need a <code>tabindex</code> value since the element does not receive keyboard focus.</li>
                   </li>
+                  <li>Keyboard focus is styled using CSS psuedo element <code>:focus</code>.</li>
                 </ul>
               </td>
             </tr>
