--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -5,17 +5,15 @@
 
     <meta charset="utf-8">
 
-    <title>ARIA Menubar Example: Menuitemradio and Menuitemcheckbox</title>
+    <title>Navigation Menubar Example: Menuitemradio and Menuitemcheckbox</title>
 
     <link href="../../css/core.css" rel="stylesheet">
     <link href="../../css/table.css" rel="stylesheet">
     <link href="css/menubarAction.css" rel="stylesheet">
-
+    <script src="../../js/examples.js" type="text/javascript"></script>
     <script src="js/TextStyling.js"     type="text/javascript"></script> 
-
     <script src="js/MenubarAction.js"     type="text/javascript"></script> 
     <script src="js/MenubarItemAction.js" type="text/javascript"></script> 
-
     <script src="js/PopupMenuAction.js" type="text/javascript"></script> 
     <script src="js/MenuItemAction.js"  type="text/javascript"></script> 
 
@@ -23,20 +21,14 @@
   <body>
     <main>
 
-      <h1>ARIA Menubar Example: <code>menuitemradio</code> and <code>menuitemcheckbox</code></h1>
-
-      <ul>
-        <li>List of pull down menu items that change the styling of the text.</li> 
-        <li>Menuitems include radio buttons and checkboxes to indicate the state of the styling of the text.</li> 
-        <li>Font "Size" menu included two menuitems that are disabled base on the current size of the text.</li>
-      </ul>
- 
-      <p><a href="../../aria-practices.html#menu">Authoring Practice Design Patten for Menubar</a></p>
-
-      <section id="code-ex-1">
-
-        <h2>Example: Explcit ARIA markup indentifying <code>role</code> of each menu item</h2>
-
+      <h1>Navigation Menubar Example: Actions</h1> 
+        <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/144">issue 144</a>. </p>
+        <p>Following are two implementations of the <a href="../../#menu">Design Pattern for menubar</a> that demonstrate how a menubar can be used for site navigation. Each item in the menubars represents an action of styling text in <code>textarea</code> and opens a pull down menu with styling options. This example also demonstrates the usage of <code>menuitemradio</code> and <code>menuitemcheckbox</code>.</p>
+        <section id="code-ex-1">
+            <h2>Examples</h2>
+                <h3 id="ex1_label">Menubar With ARIA Markup with <code>menuitemradio</code> and <code>menuitemcheckbox</code></h3>
+                <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
+       <div id="ex1">
         <ul id="menubar1" role="menubar" aria-label="Text Formatting">
 
           <li>
@@ -110,9 +102,15 @@ Now we are engaged in a great civil war, testing whether that nation, or any nat
 
 But, in a larger sense, we can not dedicate, we can not consecrate, we can not hallow, this ground. The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us, that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion, that we here highly resolve that these dead shall not have died in vain, that this nation, under God, shall have a new birth of freedom, and that government of the people, by the people, for the people, shall not perish from the earth.
         </textarea>
-
+</div>
         <p><a href="http://en.wikipedia.org/wiki/Gettysburg,_Pennsylvania">More information on Gettysburg Address</a></p>
-        </div>
+<h4>Notes</h4>
+        <ol>
+        <li>List of pull down menu items that change the styling of the text.</li> 
+        <li>Menuitems include radio buttons and checkboxes to indicate the state of the styling of the text.</li> 
+        <li>Font "Size" menu included two menuitems that are disabled base on the current size of the text.</li>
+      </ol>
+</section>
 
       <h2 id="id_kbd">Keyboard Support</h2>
 
@@ -286,7 +284,100 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </tbody>
       </table>
+      <section>
+      <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
+            <table aria-labelledby="rps_label">
+                <thead>
+                    <tr>
+                        <th>Attribute</th>
+                        <th>Applied to Element</th>
+                        <th>Usage</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th><code>role=&quot;menubar&quot;</code></th>
+                        <td><code>ul</code> element</td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th><code>role=&quot;menuitem&quot;</code></th>
+                        <td><code>span</code> element</td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th><code>role=&quot;menu&quot;</code></th>
+                        <td><code>ul</code> element</td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th><code>aria-label</code></th>
+                        <td><code>ul</code> element</td>
+                        <td>brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <!--  Specify states and properties used like this; replace with the attributes that are relevant. -->
+                            <code>aria-haspopup=&quot;true&quot;</code>
+                        </th>
+                        <td><code>span</code> element which has <code>role="menuitem"</code></td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <!--  Specify states and properties used like this; replace with the attributes that are relevant. -->
+                            <code>aria-expanded=&quot;false&quot;</code>
+                        </th>
+                        <td><code>span</code> element which has <code>role="menuitem"</code></td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                    <tr>
+                        <th><code>role=&quot;menuitemradio&quot;</code></th>
+                        <td><code>li</code> element</td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                                        <tr>
+                        <th><code>role=&quot;menuitemcheckbox&quot;</code></th>
+                        <td><code>li</code> element</td>
+                        <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+                    </tr>
+                </tbody>
+            </table>
+      </section>
+      <section>
+            <h2>Javascript and CSS Source Code</h2>
+            <ul>
+                <li>
+                    CSS:
+                    <a href="css/menubarAction.css" type="tex/css">menubarAction.css</a>
+                </li>
+                <li>Javascript:
+                    <ul>
+                        <li><a href="js/MenubarAction.js" type="text/javascript">MenubarAction.js</a></li>
+                        <li><a href="js/MenubarItemAction.js" type="text/javascript">MenubarItemAction.js</a></li>
+                        <li><a href="js/PopupMenuAction.js" type="text/javascript">PopupMenuAction.js</a></li>
+                        <li><a href="js/MenuItemAction.js" type="text/javascript">MenuItemAction.js</a></li>
+                        <li><a href="js/TextStyling.js" type="text/javascript">TextStyling.js</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
 
+
+     <section>
+            <h2>HTML Source Code</h2>
+            <h3 id="sc1_label">Example: Menubar With ARIA Markup in the HTML Source</h3>
+            <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
+            <div id="sc1"></div>
+            <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for"></div>
+            <script>
+            sourceCode.add('sc1', 'ex1')
+            </script>
+            <!--  After all source has been added, run make to do the insert.  -->
+            <script>
+            sourceCode.make()
+            </script>
+        </section>
   </main>
 
   <script type="text/javascript">
