--- a/examples/grid/advancedDataGrid.html
+++ b/examples/grid/advancedDataGrid.html
@@ -7,8 +7,9 @@
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/utils.js" type="text/javascript"></script>
 <!--  
-  js and css for this example. 
+  js and css for this example.
   Additional scripts will need to be added to add the advanced functions required by issue #155.
 -->
 <link href="css/menuButton.css" rel="stylesheet">
@@ -22,11 +23,11 @@
   <h1>Advanced Data Grid</h1>
   <p>
     This example has not yet been developed.
-    Development is described in 
+    Development is described in
     <a href="https://github.com/w3c/aria-practices/issues/155">issue 155.</a>
   </p>
   <p>
-    This implementation of the 
+    This implementation of the
     <a href="../../#grid">design pattern for grid</a>
     demonstrates how to implement a grid that has functionality similar to a spreadsheet.
   </p>
@@ -70,9 +71,9 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!-- 
+    <!--
       List the keys supported in this example.
-      Recommendation: Copy the list from the keyboard section of the design pattern in aria-practices.html 
+      Recommendation: Copy the list from the keyboard section of the design pattern in aria-practices.html
       and then reduce/simplify it to describe only what this example supports and how it behaves.
      -->
     <ul>
@@ -84,7 +85,7 @@
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.  
+      Update this table to describe how roles, properties, states, and tabindex are used in this example.
       If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
     -->
     <table aria-labelledby="rps_label">
