--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -8,21 +8,24 @@
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
-
+<script src="../js/utils.js" type="text/javascript"></script>
 <!--  js and css for this example. -->
+<link href="css/menuButton.css" rel="stylesheet">
+<script src="js/menuButton.js" type="text/javascript"></script>
 <link href="css/toolbar.css" rel="stylesheet">
 <script src="js/toolbar.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
   <main>
   <h1>Toolbar Example</h1>
   <p>
     <strong>NOTE:</strong> This example is not yet complete.
-    When it is ready for review, feedback will be welcom in 
+    When it is ready for review, feedback will be welcom in
     <a href="https://github.com/w3c/aria-practices/issues/126">issue 126.</a>
   </p>
   <p>
-    Following is an example implementation of the 
+    Following is an example implementation of the
     <a href="../../#toolbar">design pattern for toolbar</a>
     that demonstrates how a toolbar can group buttons, links, and checkboxes into a single tab stop.
     It also illustrates the roving tabindex method for managing focus in a composite component.
@@ -31,18 +34,32 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-      <!--  Replace content of this div with the example.  -->
-      <p>This is the place where the reader will experience the functioning example.</p>
-      <ul>
-        <li>The HTML in this section along with the javascript and CSS it uses demonstrate
-          the design pattern.</li>
-        <li>
-          When developing an example implementation for this guide, please follow the
-          <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>
-          .
-        </li>
-        <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
-      </ul>
+        <div class="toolbar" role="toolbar">
+            <div class="toolbar-item selected" role="button" tabindex="0" aria-selected="true">
+                Tool 1
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">Tool 2</div>
+            <div class="toolbar-item" role="button" tabindex="-1">Tool 3</div>
+            <div class="toolbar-item" role="button" tabindex="-1">Tool 4</div>
+            <div class="toolbar-item" role="button" tabindex="-1">Tool 5</div>
+            <div class="menu-wrapper">
+              <button
+                tabindex="-1"
+                aria-haspopup="true"
+                aria-controls="menu1"
+                class="toolbar-item menu-button">
+                Menu
+              </button>
+              <ul role="menu" id="menu1">
+                <li role="menuitem">Item 1</li>
+                <li role="menuitem">Item 2</li>
+                <li role="menuitem">Item 3</li>
+                <li role="menuitem">Item 4</li>
+                <li role="menuitem">Item 5</li>
+                <li role="menuitem">Item 6</li>
+              </ul>
+            </td>
+        </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
@@ -51,7 +68,7 @@
     <h2>Accessibility Features</h2>
     <ol>
       <li>
-        The focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>. 
+        The focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>.
       Because the control that most recently had focus has <code>tabindex=&quot;0&quot;</code>,
       focus returns to the control that last had focus when tabbing into the toolbar.
     </li>
@@ -64,16 +81,16 @@
     <h2 id="kbd_label">Keyboard Support</h2>
     <ul>
       <li>
-        <kbd>Tab</kbd>: Moves focus into and out of the toolbar. 
+        <kbd>Tab</kbd>: Moves focus into and out of the toolbar.
         When focus moves into the toolbar, the first enabled control receives focus.
         If the toolbar has previously contained focus, the control that last had focus receives focus.
       </li>
       <li>
-        <kbd>Left Arrow</kbd>: Moves focus to the previous control, 
+        <kbd>Left Arrow</kbd>: Moves focus to the previous control,
         wrapping from the first control to the last.
       </li>
       <li>
-        <kbd>Right Arrow</kbd>: Moves focus to the next control,  
+        <kbd>Right Arrow</kbd>: Moves focus to the next control,
         wrapping from the last control to the first.
       </li>
       <li><kbd>Home</kbd>: Moves focus to the first control.</li>
@@ -97,7 +114,7 @@
           <td><code>div</code></td>
           <td>
             Identifies the toolbar container for assistive technologies.
-            Because focus is managed with a roving tabindex instead of <code>aria-activedescendant</code>, the toolbar div is not focusable. 
+            Because focus is managed with a roving tabindex instead of <code>aria-activedescendant</code>, the toolbar div is not focusable.
           </td>
         </tr>
         <tr>
