Setup toolbar example

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -7,10 +7,9 @@
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/utils.js" type="text/javascript"></script>
 <!--  js and css for this example. -->
-<link href="css/menuButton.css" rel="stylesheet">
 <link href="css/layoutGrids.css" rel="stylesheet">
-<script src="js/menuButton.js" type="text/javascript"></script>
 <script src="js/dataGrid.js" type="text/javascript"></script>
 <script src="js/layoutGrids.js" type="text/javascript"></script>
 </head>
@@ -625,14 +624,12 @@
       <li>CSS:
         <ul>
           <li><a href="css/layoutGrids.css" type="tex/css">layoutGrids.css</a></li>
-          <li><a href="css/menuButton.css" type="tex/css">menuButton.css</a></li>
         </ul>
       </li>
       <li>JavaScript:
         <ul>
           <li><a href="js/layoutGrids.js" type="text/javascript">layoutGrids.js</a></li>
           <li><a href="js/dataGrid.js" type="text/javascript">dataGrid.js</a></li>
-          <li><a href="js/menuButton.js" type="text/javascript">menuButton.js</a></li>
         </ul>
       </li>
     </ul>
