--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -8,6 +8,7 @@
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
 <link href="css/menuButton.css" rel="stylesheet">
