Clarify description of screen reader listbox presentation
To address the Nov 28, 2016 comment by @jnurthen on issue #122,
modified aria-practices.html:
In the listbox pattern description, changed:
When screen readers present a listbox, they render the name, state, and position of each option in the list.
To:
When screen readers present a listbox, they may render the name, state, and position of each option in the list.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -918,7 +918,7 @@
         A listbox that allows a single option to be chosen is a single-select listbox; one that allows multiple options to be selected is a multi-select listbox.
       </p>
       <p>
-        When screen readers present a listbox, they render the name, state, and position of each option in the list.
+        When screen readers present a listbox, they may render the name, state, and position of each option in the list.
         The name of an option is a string calculated by the browser, typically from the content of the option element.
         As a flat string, the name does not contain any semantic information.
         Thus, if an option contains a semantic element, such as a heading, screen reader users will not have access to the semantics.
