Update example template and depricate multi-example template
renamed:    examples/coding-template/MultipleImplementationExample-Template.html -> examples/coding-template/Depricated-MultipleImplementationExample-Template.html
renamed:    examples/coding-template/SingleImplementationExample-Template.html -> examples/coding-template/Example-Template.html

Modified examples/coding-template/Example-Template.html:
1. Added related examples list to intro
2. Changed keyboard table  to reflect Nov 21, 2016 discussion.
3. Added instructional comments for keyboard table.
4. Changed role, state, property, and tabindex attribute table to reflect Nov 21, 2016 discussion.
5. Added instructional comments to attributes table.

--- a/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
+++ b/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <!-- 
+  This template is depricated.
+  As of November 21, 2016, the task force agrees that:
+  * We will put one example per page.
+  * Multiple examples on a page add complexity, create greater potential for confusion.
+  * Priority is clarity and simplicity even if that creates some duplication of content.
   An example that was implemented with this template can be found in: examples/checkbox/checkbox-2.html. 
   This template is for examples where multiple implementations of the same design pattern are demonstrated.
   This template includes space for 3 implementations; reduce or expand as needed.
