--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -15,7 +15,7 @@
   The name should be unique if the pattern will have multiple implementations, 
   e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
 -->
-<title>EXAMPLE_NAME | WAI-ARIA Authoring Practices 1.1</title>
+<title>EXAMPLE_NAME Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link href="../css/core.css" rel="stylesheet">
@@ -32,15 +32,20 @@
 </head>
 <body>
   <main> <!--  Repeat the name of the example in this H1  -->
-  <h1>EXAMPLE_NAME</h1>
+  <h1>EXAMPLE_NAME Example</h1>
 
   <p>
     <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
     Replace this paragraph with an overview of the example that is something like the following. The
     below example section demonstrates a simple checkbox that implements the
-    <a href="../../#checkbox">design pattern for checkbox</a>
-    .
+    <a href="../../#checkbox">design pattern for checkbox.</a>
+    This example uses ... summarize salient techniques )
   </p>
+  <p>Similar examples include: </p>
+  <ul>
+    <li><a href="#">example name</a>: summarize what this related example demonstrates.</li>
+    <!--  list other examples that implement the same design pattern. -->
+  </ul>
 
   <section>
     <h2 id="ex_label">Example</h2>
@@ -70,13 +75,13 @@
 
   <section>
     <h2>Accessibility Features</h2>
-    <p class="annotate">Please replace this content with a list of accessibility features
+    <p class="annotate">If appropriate, please replace this content with a list of any special or noteworthy accessibility features
       demonstrated in this implementation, such as:</p>
     <ol>
-      <li>ARIA roles</li>
-      <li>property and state information</li>
-      <li>Event handlers</li>
-      <li><code>tabindex</code> values</li>
+      <li>What distinguishes this example from related examples.</li>
+      <li>Keyboard chortcuts, live regions,  unusual event handling, or other ancillary best practices that are employed.</li>
+      <li>Do not include information that would be repeated in the following keyboard and attribute sections.</li>
+      <li>Delete this section if not needed.</li>
     </ol>
   </section>
 
@@ -84,47 +89,81 @@
     <h2 id="kbd_label">Keyboard Support</h2>
     <!-- 
       List the keys supported in this example.
-      Recommendation: Copy the list from the keyboard section of the design pattern in aria-practices.html 
-      and then reduce/simplify it to describe only what this example supports and how it behaves.
+      Remember to:
+      Use kbd tags,e.g. <kbd>KeyName</kbd>.
+      Key names use first-letter caps, e.g., <kbd>Enter</kbd>.
+      Single space between multiple Words, e.g., <kbd>Up Arrow</kbd>.
+      Use + to separate modifiers, e.g., <kbd>Control + Right Arrow</kbd>.
+      One key per row, e.g., do not combine <kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> into a single row.
+      Do not use the word "key", e.g., do not write <kbd>Enter Key</kbd> or <kbd>Enter</kbd> key.
      -->
-    <ul>
-      <li><kbd>KEY_NAME</kbd>: function</li>
-      <li><kbd>KEY_NAME</kbd>: function</li>
-    </ul>
+    <table aria-labelledby="kbd_label">
+      <thead>
+        <tr>
+          <th>Key</th>
+          <th>Function</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th><kbd>KeyName</kbd></th>
+          <td>
+            Description of key function.
+            <!--  Do not use a list if there is only one function for the key.  -->
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>KeyName</kbd></th>
+          <td>
+            <ul>
+              <li>If condition 1, performs function 1.</li>
+              <li>If condition 2, performs function 2.</li>
+              <li>Only use a list if multiple statements are needed.</li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <!--
       Update this table to describe how roles, properties, states, and tabindex are used in this example.  
-      If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
     -->
     <table aria-labelledby="rps_label">
       <thead>
         <tr>
+          <th>Role</th>
           <th>Attribute</th>
-          <th>Applied to Element</th>
+          <th>Element</th>
           <th>Usage</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th><code>role=&quot;ROLE_NAME&quot;</code></th>
+          <th><code>RoleName</code></th>
+          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
           <td><code>HTML_ELEMENT</code></td>
-          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+          <td>
+            Describe usage/purpose, e.g., indicates the focusable element that serves as the ...
+          </td>
         </tr>
         <tr>
-          <th>
-            <!--  Specify states and properties used like this; replace with the attributes that are relevant. -->
-            <code>aria-labelledby=&quot;ID_REF&quot;</code>
-          </th>
+          <td>
+            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role. 
+              Make a row like this for each attribute/value pair.
+          -->
+          </td>
+          <th><code>AttributeName=<q>AttributeValue</q></code></th>
           <td><code>HTML_ELEMENT</code></td>
-          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
-        </tr>
-        <tr>
-          <th>And so on ... covering all relevant attributes</th>
-          <td>...</td>
-          <td>...</td>
+          <td>
+            <ul>
+              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
+              <li>If making multiple statements, use list for brevity and clarity</li>
+              <li>Do not make a single item list.</li>
+            </ul>
+          </td>
         </tr>
       </tbody>
     </table>
