updated tree view examples

--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -537,6 +537,16 @@
             </td>
           </tr>  
           <tr>
+            <td><code>group</code></td>
+            <td></td>
+            <td><code>ul</code></td>
+            <td>
+              <ul>
+                <li>.</li>
+              </ul> 
+            </td>
+          </tr>
+          <tr>
             <td><code>treeitem</code></td>
             <td></td>
             <td><code>li</code></td>
