update review examples

--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -363,16 +363,6 @@
             </td>
           </tr>
           <tr>
-            <td><code>group</code></td>
-            <td></td>
-            <td><code>ul</code></td>
-            <td>
-              <ul>
-                <li>.</li>
-              </ul> 
-            </td>
-          </tr>
-          <tr>
             <td></td>
             <td><code>aria-label=&quot;<em>string</em>&quot;</code></td>
             <td><code>ul</code></td>
@@ -383,6 +373,17 @@
                </ul>
             </td>
           </tr>  
+          <tr>
+            <td><code>group</code></td>
+            <td></td>
+            <td><code>ul</code></td>
+            <td>
+              <ul>
+                <li>The <code>role=&quot;group&quot;</code> attribute identifies the <code>ul</code> element as a container of <code>treeitem</code> widgets for a sub-leaf of a tree.</li>
+                <li>The <code>group</code> role is important for the browser to compute <code>aria-level</code>, <code>aria-setsize</code> and <code>aria-posinset</code>.</li>
+              </ul> 
+            </td>
+          </tr>
           <tr>
             <td><code>treeitem</code></td>
             <td></td>
