--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -134,15 +134,15 @@
     <table aria-labelledby="rps_label">
       <thead>
         <tr>
-          <th>Role</th>
-          <th>Attribute</th>
-          <th>Element</th>
-          <th>Usage</th>
+          <th scope="col">Role</th>
+          <th scope="col">Attribute</th>
+          <th scope="col">Element</th>
+          <th scope="col">Usage</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th><code>RoleName</code></th>
+          <th scope="row"><code>RoleName</code></th>
           <td><!--  Leave this cell blank in rows where a role is being described. --></td>
           <td><code>HTML_ELEMENT</code></td>
           <td>
@@ -155,7 +155,7 @@
               Make a row like this for each attribute/value pair.
           -->
           </td>
-          <th><code>AttributeName=<q>AttributeValue</q></code></th>
+          <th scope="row"><code>AttributeName=<q>AttributeValue</q></code></th>
           <td><code>HTML_ELEMENT</code></td>
           <td>
             <ul>
